Fix mobile navigation on tablet size

--- a/assets/sass/components/logo.sass
+++ b/assets/sass/components/logo.sass
@@ -1,6 +1,4 @@
 .c__logo
-  top: 7px // ($topbar-height - 66px) / 2
-  left: -0.3em
   svg
     width: 138px
     height: 66px
