--- a/assets/sass/components/nav-list.sass
+++ b/assets/sass/components/nav-list.sass
@@ -39,12 +39,12 @@
 
 
 .c__nav-list--top
-  align-items: end
+  align-items: center
+  justify-content: end
   @include media-breakpoint-down(md)
     text-align: center
   @include media-breakpoint-up(md)
     flex-direction: row
-    line-height: 5
   a
     padding-bottom: 1px
     border-bottom: 2px solid transparent
