--- a/assets/sass/layout/topbar.sass
+++ b/assets/sass/layout/topbar.sass
@@ -1,13 +1,7 @@
 .l__topbar
   margin-bottom: $space-m
-  > div
-    @include media-breakpoint-down(sm)
-      padding-bottom: 1em
 
 .l__topbar__toggle
-  @include make-col-ready()
-  @include make-col(2)
-  @include make-col-offset(8)
   display: flex
   align-items: center
   @include media-breakpoint-up(md)
@@ -61,16 +55,11 @@
 // Toggle the menu via hambuger btn
 // JS found in /assets/js/toggle.js
 .js
-  .l__topbar
-    > div
-      min-height: $topbar-height
-      @include media-breakpoint-up(md)
-        height: $topbar-height
-
   @include media-breakpoint-down(sm)
     .c__nav-list--top
       transition: height cubic-bezier(.46,.03,.52,.96) 100ms
       position: static
+      grid-area: nav
       width: 100%
       height: 264px
       &.is-hidden
